gcp-tokyo/ns-baql/50-api-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: baql
  labels:
    app: api-server
spec:
  type: NodePort
  selector:
    app: api-server
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: baql
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
      containers:
      - name: api-server
        image: ghcr.io/hellodhlyn/baql:v0.5.2
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
          limits:
            cpu: 250m
            memory: 500Mi
        ports:
        - containerPort: 3000
          name: api-server-port
        livenessProbe:
          httpGet:
            path: /up
            port: api-server-port
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /up
            port: api-server-port
          initialDelaySeconds: 30
