gcp-tokyo/ns-baql/80-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-server
  namespace: baql
spec:
  parentRefs:
  - kind: Gateway
    name: external-https
    namespace: default
  hostnames:
  - baql.mollulog.net
  rules:
  - matches:
    - path:
        type: Exact
        value: /graphql
    backendRefs:
    - name: api-server
      port: 3000
